# channels_learning

./: .pre-commit-config.yaml  README.md  manage.py  monkeytype.sqlite3  mypy.ini  pyproject.toml
channels_learning/: asgi.py  routing.py  settings.py  wsgi.py
chat/: consumers.py  routing.py  tests.py  views.py
chat/templates/chat/: index.html  room.html
