[tool.poetry]
name = "channels_learning"
version = "0.1.0"
description = ""
authors = ["Riley Shea <RileyMShea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
channels = "^2.4.0"
channels_redis = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
