[tool.poetry]
name = "channels_learning"
version = "0.1.0"
description = ""
authors = ["Riley Shea <RileyMShea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
channels = "^2.4.0"
channels_redis = "^2.4.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.0.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
toml = "^0.10.0"
mypy = "^0.761"
django-stubs = "^1.4.0"
monkeytype = "^19.11.2"

[tool.black]
# Black: Opinonated code formatter
# Minimizes diffs, minimal config options
# https://github.com/psf/black
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

# The first grouping are directories
# hidden dotDirectories have a backslash as an escape character
# single files come after

exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# Sort and format imports
# Settings are compatible with [tool.black] from above
[tool.isort]
multi_line_output = 3
include_trailing_comma = true # True would be uppercase if this config was in a isort.cfg instead
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
